--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "lit-element": "^2.0.1"
   },
   "devDependencies": {
-    "semantic-release": "beta"
+    "semantic-release": "beta",
+    "@dreamworld/dw-input": "^1.0.0",
+    "@dreamworld/dw-checkbox": "^1.0.3"
   },
   "publishConfig": {
     "access": "public"
