--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "lit-element": "^2.0.1"
   },
   "devDependencies": {
-    "semantic-release": "beta",
-    "@dreamworld/dw-input": "^1.0.0",
-    "@dreamworld/dw-checkbox": "^1.0.3"
+    "@dreamworld/dw-checkbox": "^1.0.3",
+    "@dreamworld/dw-input": "^1.5.0",
+    "@dreamworld/flex-layout": "^1.1.0",
+    "semantic-release": "beta"
   },
   "publishConfig": {
     "access": "public"
