--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/DreamworldSolutions/dw-form#README",
   "dependencies": {
     "@material/mwc-formfield": "^0.6.0",
-    "lit-element": "^2.0.1"
+    "lit-element": "^2.0.1",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@dreamworld/dw-checkbox": "^1.0.3",
