--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@material/mwc-formfield": "^0.6.0",
     "lit-element": "^2.0.1",
-    "lodash": "^4.17.15"
+    "lodash-es": "^4.17.15"
   },
   "devDependencies": {
     "@dreamworld/dw-checkbox": "^1.0.3",
