--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "homepage": "https://github.com/DreamworldSolutions/dw-form#README",
   "dependencies": {
     "@material/mwc-formfield": "^0.6.0",
-    "lit-element": "^2.0.1"
+    "lit-element": "^2.0.1",
+    "lodash-es": "^4.17.15"
   },
   "devDependencies": {
     "@dreamworld/dw-checkbox": "^1.0.3",
-    "@dreamworld/dw-input": "^1.0.0",
+    "@dreamworld/dw-input": "^1.5.0",
+    "@dreamworld/flex-layout": "^1.1.0",
     "semantic-release": "16.0.0-beta.23"
   },
   "publishConfig": {
