--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/DreamworldSolutions/dw-form#README",
   "dependencies": {
+    "@dreamworld/pwa-helpers": "^1.7.1",
     "@material/mwc-formfield": "^0.6.0",
     "lit-element": "^2.0.1",
     "lodash-es": "^4.17.15"
@@ -35,6 +36,8 @@
     "access": "public"
   },
   "resolutions": {
-    "@semantic-release/npm": "5.2.0-beta.5"
+    "@semantic-release/npm": "5.2.0-beta.5",
+    "lit-element": "2.3.1",
+    "lit-html": "1.2.1"
   }
 }
