--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/DreamworldSolutions/dw-form#README",
   "dependencies": {
     "@dreamworld/pwa-helpers": "^1.7.1",
-    "@material/mwc-formfield": "^0.6.0",
+    "@material/mwc-formfield": "^0.20.0",
     "lit-element": "^2.0.1",
     "lodash-es": "^4.17.15"
   },
@@ -37,7 +37,8 @@
   },
   "resolutions": {
     "lit-element": "2.3.1",
-    "lit-html": "1.2.1"
+    "lit-html": "1.2.1",
+    "tslib": "2.1.0"
   },
   "release": {
     "branches": [
