--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dw-form.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "wds --node-resolve --open --watch"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "lodash-es": "^4.17.15"
   },
   "devDependencies": {
+    "@web/dev-server": "^0.1.34",
     "semantic-release": "17.0.8"
   },
   "publishConfig": {
