--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dw-form.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "wds --node-resolve --open --watch"
   },
   "repository": {
     "type": "git",
@@ -21,21 +22,18 @@
   },
   "homepage": "https://github.com/DreamworldSolutions/dw-form#README",
   "dependencies": {
-    "@dreamworld/material-styles": "^2.0.0",
-    "@dreamworld/pwa-helpers": "^1.7.1",
-    "lit-element": "^2.0.1",
+    "@dreamworld/material-styles": "^3.0.0",
+    "@dreamworld/pwa-helpers": "^1.13.1",
     "lodash-es": "^4.17.15"
   },
   "devDependencies": {
-    "@dreamworld/flex-layout": "^1.1.0",
+    "@web/dev-server": "^0.1.34",
     "semantic-release": "17.0.8"
   },
   "publishConfig": {
     "access": "public"
   },
   "resolutions": {
-    "lit-element": "2.3.1",
-    "lit-html": "1.2.1",
     "tslib": "2.1.0"
   },
   "release": {
